name:                test-servant
version:             0.1.0.0
synopsis:
description:         Simple example to illustrate how to use persistent and servant in combination.
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II, Sönke Hahn
maintainer:          mchaver@gmail.com, SoenkeHahn@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Server
  other-modules:       Api
                     , Models
                     , Handlers
  build-depends:       base >=4.7 && <5
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable test-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-servant
  default-language:    Haskell2010

test-suite test-servant-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:      test
                     , app
  other-modules:       Api
                     , Server
                     , Models
                     , AppSpec
                     , Handlers
  build-depends:       base >=4.7 && <5
                     , hspec
                     , aeson
                     , persistent
                     , monad-logger
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , wai
                     , servant
                     , servant-client
                     , servant-server
                     , string-conversions
                     , warp
                     , http-client
                     , text
                     , mockery
  default-language:    Haskell2010
